# owldict

./: Cargo.toml  README.md
src/: entry.rs  main.rs  utils.rs
