[package]
name = "owldict"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
edition = "2018"
description = "A simple to use command line dictionary for english."
readme = "README.md"
repository = "https://github.com/spyrosroum/owldict"
license = "GPL-2.0"
license-file = "LICENSE"
keywords = ["Dictionary"]

[dependencies]
ureq = { version = "1", features = ["json"] }
serde = "1"
clap = "2"
dotenv = "0.15"
colored = "2"
