[package]
name = "owldict"
version = "1.0.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
edition = "2018"
description = "A simple to use command line dictionary for english."
readme = "README.md"
repository = "https://github.com/spyrosroum/owldict"
license = "GPL-2.0"
keywords = ["Dictionary"]
categories = ["command-line-utilities"]

[dependencies]
ureq = { version = "1", features = ["json"] }
serde = "1"
clap = "2"
dotenv = "0.15"
colored = "2"
